# vulkan-minimal

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
internal/: CMakeLists.txt  data.hpp  uniform.hpp  uniform_desc.hpp  utils.hpp  vertex.hpp  vertex_desc.hpp  vulkan_minimal.hpp  vulkan_tutorial.hpp  wsi.hpp
shaders/: triangle.vert
src/: CMakeLists.txt  main.cpp
vendors/: CMakeLists.txt
